--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "author": "Meyazhagan",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
         "express-graphql": "^0.12.0",
         "graphql": "^16.2.0",
+        "joi": "^17.5.0",
+        "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.21",
         "mongoose": "^6.1.3"
     },
     "devDependencies": {
